--- a/src/app/producer1/producers/producers.component.html
+++ b/src/app/producer1/producers/producers.component.html
@@ -4,7 +4,7 @@
   </h1>
 </mat-toolbar>
 <div style="margin:10px;">
-  <app-vote-progress-bar [chainStatus]="chainStatus$ | async"></app-vote-progress-bar>
+  <app-vote-progress-bar [chainStatus]="chainStatus$ | async" style="margin:20px 0;"></app-vote-progress-bar>
   <app-table [dataSource]="producers$ | async" [enablePager]="false">
     <table mat-table [dataSource]="producers$ | async">
       <ng-container *ngIf="columnHeaders$ | async as columnHeaders">
