--- a/src/app/account1/account/account.component.html
+++ b/src/app/account1/account/account.component.html
@@ -4,9 +4,7 @@
   </h1>
 </mat-toolbar>
 <div *ngIf="account$ | async as account; else loading">
-  <mat-card style="margin:10px;padding:10px;">
-    <app-account-information [account]="account" [eosPrice]="eosPrice$ | async"></app-account-information>
-  </mat-card>
+  <app-account-information [account]="account" [eosPrice]="eosPrice$ | async" style="margin:10px;"></app-account-information>
   <mat-tab-group color="primary" dynamicHeight="true">
     <mat-tab>
       <ng-template mat-tab-label>
