--- a/src/app/dashboard1/dashboard/blocks/blocks.component.html
+++ b/src/app/dashboard1/dashboard/blocks/blocks.component.html
@@ -1,34 +1,38 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" style="padding:10px;">
-  <h3 class="mat-subheading-2">{{ 'Blocks' | translate }}</h3>
-  <a mat-button color="accent" [routerLink]="['./blocks']">{{ 'ViewAll' | translate }}</a>
-</div>
-<app-table [dataSource]="blocks$ | async" [enablePager]="false">
-  <table mat-table [dataSource]="blocks$ | async">
-    <tr mat-header-row *matHeaderRowDef="blocksColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: blocksColumns;"></tr>
-    <ng-container matColumnDef="blockNumber">
-      <th mat-header-cell *matHeaderCellDef>#</th>
-      <td mat-cell *matCellDef="let block">
-        <a [routerLink]="['./blocks',block.blockNumber]">{{block.blockNumber}}</a>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="timestamp">
-      <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
-      <td mat-cell *matCellDef="let block">
-        {{block.timestamp | amFromUnix | amTimeAgo}}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="producer">
-      <th mat-header-cell *matHeaderCellDef>{{ 'Producer' | translate }}</th>
-      <td mat-cell *matCellDef="let block">
-        <a [routerLink]="['./producers',block.producer]">{{block.producer}}</a>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="numTransactions">
-      <th mat-header-cell *matHeaderCellDef>{{ 'Txns' | translate }}</th>
-      <td mat-cell *matCellDef="let block">
-        {{block.numTransactions}}
-      </td>
-    </ng-container>
-  </table>
-</app-table>
+<mat-card>
+  <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
+    {{ 'Blocks' | translate }}
+    <a mat-stroked-button color="accent" [routerLink]="['./blocks']">{{ 'ViewAll' | translate }}</a>
+  </mat-card-title>
+  <mat-card-content>
+    <app-table [dataSource]="blocks$ | async" [enablePager]="false">
+      <table mat-table [dataSource]="blocks$ | async">
+        <tr mat-header-row *matHeaderRowDef="blocksColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: blocksColumns;"></tr>
+        <ng-container matColumnDef="blockNumber">
+          <th mat-header-cell *matHeaderCellDef>#</th>
+          <td mat-cell *matCellDef="let block">
+            <a [routerLink]="['./blocks',block.blockNumber]">{{block.blockNumber}}</a>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="timestamp">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
+          <td mat-cell *matCellDef="let block">
+            {{block.timestamp | amFromUnix | date:'medium'}}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="producer">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Producer' | translate }}</th>
+          <td mat-cell *matCellDef="let block">
+            <a [routerLink]="['./producers',block.producer]">{{block.producer}}</a>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="numTransactions">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Tx' | translate }}</th>
+          <td mat-cell *matCellDef="let block">
+            {{block.numTransactions}}
+          </td>
+        </ng-container>
+      </table>
+    </app-table>
+  </mat-card-content>
+</mat-card>
