--- a/src/app/dashboard1/dashboard/transactions/transactions.component.html
+++ b/src/app/dashboard1/dashboard/transactions/transactions.component.html
@@ -1,28 +1,32 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" style="padding:10px;">
-  <h3 class="mat-subheading-2">{{ 'Transactions' | translate }}</h3>
-  <a mat-button color="accent" [routerLink]="['./transactions']">{{ 'ViewAll' | translate }}</a>
-</div>
-<app-table [dataSource]="transactions$ | async" [enablePager]="false">
-  <table mat-table [dataSource]="transactions$ | async">
-    <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>#</th>
-      <td mat-cell *matCellDef="let transaction">
-        <a [routerLink]="['./transactions',transaction.id]">{{transaction.id | slice:0:26}}...</a>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="createdAt">
-      <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
-      <td mat-cell *matCellDef="let transaction">
-        {{transaction.createdAt | amFromUnix | amTimeAgo}}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="numActions">
-      <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
-      <td mat-cell *matCellDef="let transaction">
-        {{transaction.numActions}}
-      </td>
-    </ng-container>
-  </table>
-</app-table>
+<mat-card>
+  <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
+    {{ 'Transactions' | translate }}
+    <a mat-stroked-button color="accent" [routerLink]="['./transactions']">{{ 'ViewAll' | translate }}</a>
+  </mat-card-title>
+  <mat-card-content>
+    <app-table [dataSource]="transactions$ | async" [enablePager]="false">
+      <table mat-table [dataSource]="transactions$ | async">
+        <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>#</th>
+          <td mat-cell *matCellDef="let transaction">
+            <a [routerLink]="['./transactions',transaction.id]">{{transaction.id | slice:0:26}}...</a>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
+          <td mat-cell *matCellDef="let transaction">
+            {{transaction.createdAt | amFromUnix | date:'medium'}}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="numActions">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
+          <td mat-cell *matCellDef="let transaction">
+            {{transaction.numActions}}
+          </td>
+        </ng-container>
+      </table>
+    </app-table>
+  </mat-card-content>
+</mat-card>
