--- a/src/app/producer1/producer/information/information.component.scss
+++ b/src/app/producer1/producer/information/information.component.scss
@@ -1,12 +1,16 @@
 :host {
-    display: block;
+  display: block;
+}
+
+table {
+  width: 100%;
+  overflow: auto;
+  td {
+    padding: 5px;
   }
-  
-  table {
-    width: 100%;
-    overflow: auto;
-    td {
-      padding: 5px;
-    }
-  }
-  
+}
+
+.mat-icon {
+  color: #4caf50;
+  margin-left: 5px;
+}
