--- a/src/app/producer1/producer/votes/votes.component.html
+++ b/src/app/producer1/producer/votes/votes.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="votes$ | async as votes; else loading">
-  <app-table [dataSource]="votes" [enablePager]="false">
+  <app-table [dataSource]="votes">
     <table mat-table [dataSource]="votes">
       <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
       <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
