--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,33 +1,23 @@
 <ng-container *ngIf="dataSource; else loading">
-  <ng-container *ngIf="enablePager && showTopPager">
-    <div class="table-pager-top" fxLayout="row" fxLayoutAlign="space-between center" *ngIf="(page$ | async) as page">
-      <button mat-button color="accent" [disabled]="page <= 1" (click)="previous(page)">
+  <div class="table-title" fxLayout="row" fxLayoutAlign="start center" *ngIf="(page$ | async) as page">
+    <h3 class="mat-subheading-2" fxFlex>
+      {{ title }}
+    </h3>
+    <div *ngIf="enablePager">
+      <button mat-stroked-button color="accent" [disabled]="page <= 1" (click)="previous(page)">
         <mat-icon>navigate_before</mat-icon>
         Previous
       </button>
-      <button mat-button color="accent" [disabled]="dataSource?.length < 30" (click)="next(page)">
+      <button mat-stroked-button color="accent" [disabled]="dataSource?.length < 30" (click)="next(page)" style="margin-left:10px;">
         Next
         <mat-icon>navigate_next</mat-icon>
       </button>
     </div>
-    <mat-progress-bar color="accent" [style.visibility]="visibility" mode="indeterminate"></mat-progress-bar>
-  </ng-container>
+  </div>
+  <mat-progress-bar color="accent" [style.visibility]="visibility" mode="indeterminate"></mat-progress-bar>
   <div class="table-wrapper">
     <ng-content></ng-content>
   </div>
-  <ng-container *ngIf="enablePager">
-    <mat-progress-bar color="accent" [style.visibility]="visibility" mode="indeterminate"></mat-progress-bar>
-    <div class="table-pager-bottom" fxLayout="row" fxLayoutAlign="space-between center" *ngIf="(page$ | async) as page">
-      <button mat-button color="accent" [disabled]="page <= 1" (click)="previous(page)">
-        <mat-icon>navigate_before</mat-icon>
-        Previous
-      </button>
-      <button mat-button color="accent" [disabled]="dataSource?.length < 30" (click)="next(page)">
-        Next
-        <mat-icon>navigate_next</mat-icon>
-      </button>
-    </div>
-  </ng-container>
 </ng-container>
 <ng-template #loading>
   <app-spinner></app-spinner>
