--- a/src/material.scss
+++ b/src/material.scss
@@ -3,11 +3,10 @@
   border: 1px solid rgba(0, 0, 0, .12);
 }
 
-.mat-header-cell,
-.mat-cell {
-  padding: 5px;
-  word-break: break-word;
-  min-width: 100px;
+.mat-header-cell {
+  font-size: 14px;
+  font-weight: 600;
+  color: inherit;
 }
 
 .mat-headline,
