--- a/src/app/account1/account/actions/actions.component.html
+++ b/src/app/account1/account/actions/actions.component.html
@@ -38,7 +38,7 @@
     </app-table>
   </ng-container>
   <ng-template #empty>
-    <p class="mat-body-2">No Actions</p>
+    <p class="mat-body-2" style="margin:10px;">No Actions</p>
   </ng-template>
 </ng-container>
 <ng-template #loading>
