--- a/src/app/producer1/producer/information/information.component.html
+++ b/src/app/producer1/producer/information/information.component.html
@@ -2,7 +2,7 @@
   <mat-card-title>
     {{ 'Producer' | translate }}
   </mat-card-title>
-  <mat-card-content>
+  <mat-card-content class="table-container">
     <table>
       <tr *ngIf="producer.bpJson?.org?.candidate_name">
         <td>{{ 'Name' | translate }}:</td>
