--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,16 +7,27 @@ pre {
 
 .table-container {
   overflow: auto;
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    td {
-      height: 40px;
-      padding: 0 10px;
-    }
-  }
 }
 
-table tbody tr:nth-child(odd) {
-  background-color: #f5f5f5;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  th,
+  td {
+    height: 40px;
+    padding: 0 10px !important;
+    white-space: nowrap;
+  }
+  th:first-child,
+  td:first-child {
+    padding-left: 15px !important;
+  }
+  th:last-child,
+  td:last-child {
+    padding-right: 15px !important;
+  }
+  tbody tr:nth-child(odd) {
+    background-color: #f5f5f5;
+  }
 }
