temp disable dashboard-stats

--- a/src/app/dashboard1/dashboard/dashboard.component.html
+++ b/src/app/dashboard1/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
   </h1>
 </mat-toolbar>
 <div>
-  <app-dashboard-stats></app-dashboard-stats>
+  <!-- <app-dashboard-stats></app-dashboard-stats> -->
   <div fxLayout.gt-md="row" fxLayout="column">
     <div fxFlex style="padding:10px;">
       <app-dashboard-blocks></app-dashboard-blocks>
