--- a/src/app/block1/block/block.component.html
+++ b/src/app/block1/block/block.component.html
@@ -3,33 +3,38 @@
     {{ 'Block' | translate }} #{{id$ | async}}
   </h1>
 </mat-toolbar>
-<mat-tab-group color="primary" dynamicHeight="true" *ngIf="block$ | async as block; else loading">
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon style="margin-right:5px;">info</mat-icon>
-      {{ 'BlockInformation' | translate }}
-    </ng-template>
-    <app-block-information [block]="block"></app-block-information>
-  </mat-tab>
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon style="margin-right:5px;">code</mat-icon>
-      {{ 'BlockchainRawData' | translate }}
-    </ng-template>
-    <ng-template matTabContent>
-      <app-block-data [id]="id$ | async"></app-block-data>
-    </ng-template>
-  </mat-tab>
-  <!-- <mat-tab [disabled]="block.numTransactions == 0">
-    <ng-template mat-tab-label>
-      <mat-icon style="margin-right:5px;">list_alt</mat-icon>
-      <span [matBadge]="block.numTransactions" matBadgeOverlap="false">{{ 'Transactions' | translate }}</span>
-    </ng-template>
-    <ng-template matTabContent>
-      <app-block-transactions [id]="id$ | async"></app-block-transactions>
-    </ng-template>
-  </mat-tab> -->
-</mat-tab-group>
+<ng-container *ngIf="block$ | async as block; else loading">
+  <mat-tab-group color="primary" dynamicHeight="true" *ngIf="block !== -1; else error">
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon style="margin-right:5px;">info</mat-icon>
+        {{ 'BlockInformation' | translate }}
+      </ng-template>
+      <app-block-information [block]="block"></app-block-information>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon style="margin-right:5px;">code</mat-icon>
+        {{ 'BlockchainRawData' | translate }}
+      </ng-template>
+      <ng-template matTabContent>
+        <app-block-data [id]="id$ | async"></app-block-data>
+      </ng-template>
+    </mat-tab>
+    <!-- <mat-tab [disabled]="block.numTransactions == 0">
+        <ng-template mat-tab-label>
+          <mat-icon style="margin-right:5px;">list_alt</mat-icon>
+          <span [matBadge]="block.numTransactions" matBadgeOverlap="false">{{ 'Transactions' | translate }}</span>
+        </ng-template>
+        <ng-template matTabContent>
+          <app-block-transactions [id]="id$ | async"></app-block-transactions>
+        </ng-template>
+      </mat-tab> -->
+  </mat-tab-group>
+  <ng-template #error>
+    <app-error></app-error>
+  </ng-template>
+</ng-container>
 <ng-template #loading>
   <app-spinner></app-spinner>
 </ng-template>
