--- a/src/app/transaction1/transaction/transaction.component.html
+++ b/src/app/transaction1/transaction/transaction.component.html
@@ -3,31 +3,36 @@
     {{ 'Transaction' | translate }}
   </h1>
 </mat-toolbar>
-<mat-tab-group color="primary" dynamicHeight="true" *ngIf="transaction$ | async as transaction; else loading">
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon style="margin-right:5px;">info</mat-icon>
-      {{ 'Transaction Information' | translate }}
-    </ng-template>
-    <app-transaction-information [transaction]="transaction"></app-transaction-information>
-  </mat-tab>
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon style="margin-right:5px;">code</mat-icon>
-      {{ 'BlockchainRawData' | translate }}
-    </ng-template>
-    <app-transaction-data [transaction]="transaction"></app-transaction-data>
-  </mat-tab>
-  <!-- <mat-tab [disabled]="transaction.numActions == 0">
-    <ng-template mat-tab-label>
-      <mat-icon style="margin-right:5px;">list</mat-icon>
-      <span [matBadge]="transaction.numActions" matBadgeOverlap="false">{{ 'Actions' | translate }}</span>
-    </ng-template>
-    <ng-template matTabContent>
-      <app-transaction-actions [id]="id$ | async"></app-transaction-actions>
-    </ng-template>
-  </mat-tab> -->
-</mat-tab-group>
+<ng-container *ngIf="transaction$ | async as transaction; else loading">
+  <mat-tab-group color="primary" dynamicHeight="true" *ngIf="!transaction.isError; else error">
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon style="margin-right:5px;">info</mat-icon>
+        {{ 'Transaction Information' | translate }}
+      </ng-template>
+      <app-transaction-information [transaction]="transaction.value"></app-transaction-information>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon style="margin-right:5px;">code</mat-icon>
+        {{ 'BlockchainRawData' | translate }}
+      </ng-template>
+      <app-transaction-data [transaction]="transaction.value"></app-transaction-data>
+    </mat-tab>
+    <!-- <mat-tab [disabled]="transaction.numActions == 0">
+          <ng-template mat-tab-label>
+            <mat-icon style="margin-right:5px;">list</mat-icon>
+            <span [matBadge]="transaction.numActions" matBadgeOverlap="false">{{ 'Actions' | translate }}</span>
+          </ng-template>
+          <ng-template matTabContent>
+            <app-transaction-actions [id]="id$ | async"></app-transaction-actions>
+          </ng-template>
+        </mat-tab> -->
+  </mat-tab-group>
+  <ng-template #error>
+    <app-error></app-error>
+  </ng-template>
+</ng-container>
 <ng-template #loading>
   <app-spinner></app-spinner>
 </ng-template>
