add chain status component

--- a/src/app/dashboard1/dashboard/dashboard.component.html
+++ b/src/app/dashboard1/dashboard/dashboard.component.html
@@ -4,6 +4,9 @@
   </h1>
 </mat-toolbar>
 <div>
+  <div style="padding:10px;">
+    <app-dashboard-chain-status></app-dashboard-chain-status>
+  </div>
   <!-- <app-dashboard-stats></app-dashboard-stats> -->
   <div fxLayout.gt-md="row" fxLayout="column">
     <div fxFlex style="padding:10px;">
