--- a/src/app/account/accounts/accounts.component.html
+++ b/src/app/account/accounts/accounts.component.html
@@ -33,8 +33,8 @@
 								<tbody>
 								<tr *ngFor="let account of accounts">
 									<td><a routerLink="/accounts/{{account.name}}">{{account.name}}</a></td>
-									<td>{{account.createdAt * 1000 | date:'medium'}}</td>
-									<td>{{account.updatedAt * 1000 | date:'medium'}}</td>
+									<td>{{account.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
+									<td>{{account.updatedAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
 								</tr>
 								</tbody>
 							</table>
