--- a/src/app/block/blocks/blocks.component.html
+++ b/src/app/block/blocks/blocks.component.html
@@ -37,7 +37,7 @@
 								<tbody>
 								<tr *ngFor="let block of blocks">
 									<td><a routerLink="/blocks/{{block.blockNumber}}">{{block.blockNumber}}</a></td>
-									<td class="hidden-xs">{{block.timestamp * 1000 | date:'medium'}}</td>
+									<td class="hidden-xs">{{block.timestamp | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
 									<td>{{block.irreversible}}</td>
 									<td><a routerLink="/producers/{{block.producer}}">{{block.producer}}</a></td>
 									<td>{{block.numTransactions}}</td>
