--- a/src/app/transaction/transactions/transactions.component.html
+++ b/src/app/transaction/transactions/transactions.component.html
@@ -37,8 +37,8 @@
 								<tr *ngFor="let transaction of transactions">
 									<td><a routerLink="/transactions/{{transaction.id}}">{{transaction.id|slice:0:32}}...</a></td>
 									<td><a routerLink="/blocks/{{transaction.blockId}}">{{transaction.blockId}}</a></td>
-									<td>{{transaction.createdAt * 1000 | date:'medium'}}</td>
-									<td class="hidden-xs">{{transaction.expiration * 1000 | date:'medium'}}</td>
+									<td>{{transaction.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
+									<td class="hidden-xs">{{transaction.expiration | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
 									<td>{{transaction.numActions}}</td>
 								</tr>
 								</tbody>
