--- a/src/app/account1/account/actions/actions.component.html
+++ b/src/app/account1/account/actions/actions.component.html
@@ -19,7 +19,7 @@
         <ng-container matColumnDef="createdAt">
           <th mat-header-cell *matHeaderCellDef>{{ 'Timestamp' | translate }}</th>
           <td mat-cell *matCellDef="let action">
-            {{action.createdAt * 1000 | date:'medium'}}
+            {{action.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
           </td>
         </ng-container>
         <ng-container matColumnDef="transaction">
