--- a/src/app/account1/accounts/accounts.component.html
+++ b/src/app/account1/accounts/accounts.component.html
@@ -17,13 +17,13 @@
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>{{ 'CreatedAt' | translate }}</th>
         <td mat-cell *matCellDef="let account">
-          {{account.createdAt * 1000 | date:'medium'}}
+          {{account.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="updatedAt">
         <th mat-header-cell *matHeaderCellDef>{{ 'UpdatedAt' | translate }}</th>
         <td mat-cell *matCellDef="let account">
-          {{account.updatedAt * 1000 | date:'medium'}}
+          {{account.updatedAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
     </table>
