--- a/src/app/block1/block/transactions/transactions.component.html
+++ b/src/app/block1/block/transactions/transactions.component.html
@@ -18,7 +18,7 @@
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
         <td mat-cell *matCellDef="let transaction">
-          {{transaction.createdAt * 1000 | date:'medium'}}
+          {{transaction.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="numActions">
