--- a/src/app/block1/blocks/blocks.component.html
+++ b/src/app/block1/blocks/blocks.component.html
@@ -19,7 +19,7 @@
       <ng-container matColumnDef="timestamp">
         <th mat-header-cell *matHeaderCellDef>{{ 'Timestamp' | translate }}</th>
         <td mat-cell *matCellDef="let block" class="truncate">
-          {{block.timestamp | amFromUnix | date:'medium'}}
+          {{block.timestamp | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="irreversible">
