--- a/src/app/contract1/contract/information/information.component.html
+++ b/src/app/contract1/contract/information/information.component.html
@@ -14,7 +14,7 @@
         </tr>
         <tr>
           <td>{{ 'CreatedAt' | translate }}:</td>
-          <td>{{action.createdAt * 1000 | date:'medium'}}</td>
+          <td>{{action.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
         </tr>
         <tr>
           <td>{{ 'HandlerAccount' | translate }}:</td>
