--- a/src/app/contract1/contracts/contracts.component.html
+++ b/src/app/contract1/contracts/contracts.component.html
@@ -25,7 +25,7 @@
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>{{ 'CreatedAt' | translate }}</th>
         <td mat-cell *matCellDef="let action">
-          {{action.createdAt * 1000 | date:'medium'}}
+          {{action.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="authorization">
