--- a/src/app/transaction1/transactions/transactions.component.html
+++ b/src/app/transaction1/transactions/transactions.component.html
@@ -25,13 +25,13 @@
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>{{ 'CreatedAt' | translate }}</th>
         <td mat-cell *matCellDef="let transaction">
-          {{transaction.createdAt * 1000 | date:'medium'}}
+          {{transaction.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="expiration">
         <th mat-header-cell *matHeaderCellDef>{{ 'Expiration' | translate }}</th>
         <td mat-cell *matCellDef="let transaction">
-          {{transaction.expiration * 1000 | date:'medium'}}
+          {{transaction.expiration | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="numActions">
