--- a/src/app/account1/account/actions/actions.component.html
+++ b/src/app/account1/account/actions/actions.component.html
@@ -25,7 +25,9 @@
         <ng-container matColumnDef="transaction">
           <th mat-header-cell *matHeaderCellDef>{{ 'Transaction' | translate }}</th>
           <td mat-cell *matCellDef="let action">
-            <a [routerLink]="['/transactions',action.transaction]">{{action.transaction|slice:0:16}}...</a>
+            <a [routerLink]="['/transactions',action.transaction]">
+              <id-64 [id]="action.transaction"></id-64>
+            </a>
           </td>
         </ng-container>
         <ng-container matColumnDef="name">
