--- a/src/app/block1/block/transactions/transactions.component.html
+++ b/src/app/block1/block/transactions/transactions.component.html
@@ -6,7 +6,9 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>#</th>
         <td mat-cell *matCellDef="let transaction">
-          <a [routerLink]="['../../transactions',transaction.id]">{{transaction.id | slice:0:32}}...</a>
+          <a [routerLink]="['/transactions',transaction.id]">
+            <id-64 [id]="transaction.id"></id-64>
+          </a>
         </td>
       </ng-container>
       <ng-container matColumnDef="blockId">
