--- a/src/app/contract1/contracts/contracts.component.html
+++ b/src/app/contract1/contracts/contracts.component.html
@@ -19,7 +19,9 @@
       <ng-container matColumnDef="transactionId">
         <th mat-header-cell *matHeaderCellDef>{{ 'TransactionId' | translate }}</th>
         <td mat-cell *matCellDef="let action" class="truncate">
-          <a [routerLink]="['/transactions',action.transaction]">{{action.transaction|slice:0:28}}...</a>
+          <a [routerLink]="['/transactions',action.transaction]">
+            <id-64 [id]="action.transaction" [override]="{sm:160,md:240}"></id-64>
+          </a>
         </td>
       </ng-container>
       <ng-container matColumnDef="createdAt">
