--- a/src/app/dashboard1/dashboard/transactions/transactions.component.html
+++ b/src/app/dashboard1/dashboard/transactions/transactions.component.html
@@ -13,7 +13,9 @@
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>#</th>
           <td mat-cell *matCellDef="let transaction">
-            <a [routerLink]="['./transactions',transaction.id]">{{transaction.id | slice:0:26}}...</a>
+            <a [routerLink]="['./transactions',transaction.id]">
+              <id-64 [id]="transaction.id" [override]="{lg:240}"></id-64>
+            </a>
           </td>
         </ng-container>
         <ng-container matColumnDef="createdAt">
