--- a/src/app/dashboard1/dashboard/dashboard.component.html
+++ b/src/app/dashboard1/dashboard/dashboard.component.html
@@ -7,6 +7,9 @@
   <div style="padding:10px;">
     <app-dashboard-chain-status></app-dashboard-chain-status>
   </div>
+  <div style="padding:10px;" *ngIf="isMaintenance$ | async">
+    <app-dashboard-maintenance></app-dashboard-maintenance>
+  </div>
   <!-- <app-dashboard-stats></app-dashboard-stats> -->
   <div fxLayout.gt-md="row" fxLayout="column">
     <div fxFlex style="padding:10px;">
