--- a/src/app/dashboard1/dashboard/maintenance/maintenance.component.html
+++ b/src/app/dashboard1/dashboard/maintenance/maintenance.component.html
@@ -1,3 +1,5 @@
-<p>
-  maintenance works!
-</p>
+<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" class="mat-elevation-z1" style="padding:24px;">
+  <mat-icon color="warn">warning</mat-icon>
+  <p class="mat-body-1 mat-error">EOS Tracker Database is down for maintenance. We expect to be back in a couple hours. But you can still check Block, Transaction
+    and Account information via search. Thanks for your patience.</p>
+</div>
