--- a/src/app/transaction/transaction/inline-actions/inline-actions.component.html
+++ b/src/app/transaction/transaction/inline-actions/inline-actions.component.html
@@ -5,7 +5,7 @@
       <tr mat-row *matRowDef="let row; columns: actionsColumns;"></tr>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>
-          {{ 'Action Type' | translate }}
+          {{ 'Detail' | translate }}
         </th>
         <td mat-cell *matCellDef="let action">
           <a [routerLink]="['/actions',action.transaction,action.seq]" [queryParams]="{parentId: action.parentId}">
