new actions url format

--- a/src/app/account/account/actions/actions.component.html
+++ b/src/app/account/account/actions/actions.component.html
@@ -5,9 +5,16 @@
         <tr mat-header-row *matHeaderRowDef="actionsColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: actionsColumns;"></tr>
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>#</th>
+          <th mat-header-cell *matHeaderCellDef>{{ 'Detail' | translate }}</th>
           <td mat-cell *matCellDef="let action">
-            <a [routerLink]="['/actions',action.id]">{{action.id}}</a>
+            <a [routerLink]="['/actions',action.transaction,action.seq]" [queryParams]="{parentId: action.parentId}">
+              <button mat-icon-button *ngIf="action.parentId === 0">
+                <mat-icon aria-label="main action">data_usage</mat-icon>
+              </button>
+              <button mat-icon-button *ngIf="action.parentId > 0" style="margin-left:10px;">
+                <mat-icon aria-label="inline action">subdirectory_arrow_right</mat-icon>
+              </button>
+            </a>
           </td>
         </ng-container>
         <ng-container matColumnDef="account">
