--- a/src/app/contract/contracts/contracts.component.html
+++ b/src/app/contract/contracts/contracts.component.html
@@ -11,9 +11,16 @@
         <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
       </ng-container>
       <ng-container matColumnDef="actionId">
-        <th mat-header-cell *matHeaderCellDef>{{ 'ActionId' | translate }}</th>
+        <th mat-header-cell *matHeaderCellDef>{{ 'Detail' | translate }}</th>
         <td mat-cell *matCellDef="let action">
-          <a [routerLink]="['./',action.id]">{{action.id}}</a>
+          <a [routerLink]="['/actions',action.transaction,action.seq]" [queryParams]="{parentId: action.parentId}">
+            <button mat-icon-button *ngIf="action.parentId === 0">
+              <mat-icon aria-label="main action">data_usage</mat-icon>
+            </button>
+            <button mat-icon-button *ngIf="action.parentId > 0" style="margin-left:10px;">
+              <mat-icon aria-label="inline action">subdirectory_arrow_right</mat-icon>
+            </button>
+          </a>
         </td>
       </ng-container>
       <ng-container matColumnDef="transactionId">
