--- a/src/app/account/account/actions/actions.component.html
+++ b/src/app/account/account/actions/actions.component.html
@@ -7,7 +7,7 @@
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>{{ 'Detail' | translate }}</th>
           <td mat-cell *matCellDef="let action">
-            <a [routerLink]="['/actions',action.transaction,action.seq]" [queryParams]="{parentId: action.parentId}">
+            <a [routerLink]="['/actions',action.blockId,action.transaction,action.seq]" [queryParams]="action.parentId > 0 ? {parentId: action.parentId} : {}">
               <button mat-icon-button *ngIf="action.parentId === 0">
                 <mat-icon aria-label="main action">data_usage</mat-icon>
               </button>
