--- a/src/app/transaction/transaction/inline-actions/inline-actions.component.html
+++ b/src/app/transaction/transaction/inline-actions/inline-actions.component.html
@@ -8,7 +8,7 @@
           {{ 'Detail' | translate }}
         </th>
         <td mat-cell *matCellDef="let action">
-          <a [routerLink]="['/actions',action.transaction,action.seq]" [queryParams]="{parentId: action.parentId}">
+          <a [routerLink]="['/actions',action.blockId,action.transaction,action.seq]" [queryParams]="action.parentId > 0 ? {parentId: action.parentId} : {}">
             <button mat-icon-button *ngIf="action.parentId === 0">
               <mat-icon aria-label="main action">data_usage</mat-icon>
             </button>
