--- a/src/app/block/block/block.component.html
+++ b/src/app/block/block/block.component.html
@@ -17,9 +17,7 @@
         <mat-icon style="margin-right:5px;">code</mat-icon>
         {{ 'BlockchainRawData' | translate }}
       </ng-template>
-      <ng-template matTabContent>
-        <app-block-data [block]="block.value"></app-block-data>
-      </ng-template>
+      <prettyjson [obj]="block.value.chainData"></prettyjson>
     </mat-tab>
   </mat-tab-group>
   <ng-template #error>
