--- a/src/app/block/block/information/information.component.html
+++ b/src/app/block/block/information/information.component.html
@@ -14,7 +14,7 @@
         </tr>
         <tr>
           <td>{{ 'Timestamp' | translate }}:</td>
-          <td>{{block.timestamp | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}</td>
+          <td>{{block.timestampISO | date:'MMM d, y, h:mm:ss.SSS a'}}</td>
         </tr>
         <tr>
           <td>{{ 'BlockId' | translate }}:</td>
@@ -47,7 +47,7 @@
     </mat-card-content>
   </mat-card>
   <div *ngIf="block.numTransactions > 0" style="margin-top:20px;">
-    <app-block-transactions [block]="block"></app-block-transactions>
+    <app-block-transactions [transactions]="block.transactions"></app-block-transactions>
   </div>
 </div>
 <ng-template #loading>
