--- a/src/app/block/block/transactions/transactions.component.html
+++ b/src/app/block/block/transactions/transactions.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="blockTransactions$ | async as transactions; else loading">
-  <app-table *ngIf="!isError" [dataSource]="transactions" [title]="'Transactions' | translate" [enablePager]="false">
+<ng-container *ngIf="transactions; else loading">
+  <app-table [dataSource]="transactions" [title]="'Transactions' | translate" [enablePager]="false">
     <table mat-table [dataSource]="transactions">
       <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
@@ -20,7 +20,7 @@
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
         <td mat-cell *matCellDef="let transaction">
-          {{transaction.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
+          {{transaction.createdAtISO | date:'MMM d, y, h:mm:ss.SSS a'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="numActions">
